# web_terminal_acp

./: .env.example  .gitignore  AGENTS.md  AGENT_README.md  CLAUDE.md  Makefile  README.md  README_CN.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.base  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py  version.py
backend/app/agent_plugins/: __init__.py  builtins.py  registry.py  types.py
backend/app/agent_tools/: __init__.py  common.py  registry.py  types.py  user_input.py
backend/app/client_agent/: __main__.py  agent_commands.py  agent_idle.py  agent_tool_watchers.py  agent_work_presence.py  ai_events.py  antigravity_watcher.py  aux_terminal.py  codex_watcher.py  config.py  cursor_watcher.py  git_worktree.py  outbound.py  runner.py  shell_hook.py  terminal.py  tmux_runtime.py  updater.py
backend/app/repositories/: ai_sessions.py  client_registration_keys.py  clients.py  events.py  folder_split_jobs.py  folders.py  git_worktree.py  project_summaries.py  summary_jobs.py  terminal_recents.py  ui_settings.py  windows.py
backend/app/resources/: __init__.py
backend/app/routers/: agent_profiles.py  auth.py  aux_terminal.py  client_agent.py  clients.py  folders.py  project_summaries.py  search.py  terminal.py  terminal_notifications.py  terminal_recents.py  traces.py  ui_events.py  ui_settings.py  windows.py
backend/app/services/: __init__.py  agent_activity_projection.py  (+36 more)
backend/migrations/: env.py
backend/scripts/: smoke_backend.py
backend/tests/: conftest.py
(+244 files in other folders)
