[project]
name = "web-terminal-acp-backend"
version = "0.1.0"
description = "FastAPI control plane for Web Terminal ACP"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "elasticsearch[async]>=8.15.0,<9.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "paramiko>=3.5.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6",
  "watchdog>=4.0.2",
  "websockets>=13.1",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.22.1",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
